--- a/Makefile.config.example
+++ b/Makefile.config.example
@@ -7,7 +7,7 @@ USE_CUDNN := 1
 # CPU-only switch (uncomment to build without GPU support).
 # CPU_ONLY := 1
 
-OPENCV_VERSION := 3
+# OPENCV_VERSION := 3
 
 # To customize your choice of compiler, uncomment and set the following.
 # N.B. the default for Linux is g++ and the default for OSX is clang++
@@ -55,10 +55,10 @@ BLAS := atlas
 		# /usr/lib/python2.7/dist-packages/numpy/core/include
 # Anaconda Python distribution is quite popular. Include path:
 # Verify anaconda location, sometimes it's in root.
-# ANACONDA_HOME := /opt/conda
-# PYTHON_INCLUDE := $(ANACONDA_HOME)/include \
-		# $(ANACONDA_HOME)/include/python3.6m \
-		# $(ANACONDA_HOME)/lib/python3.6m/site-packages/numpy/core/include \
+ANACONDA_HOME := /opt/conda
+PYTHON_INCLUDE := $(ANACONDA_HOME)/include \
+		  $(ANACONDA_HOME)/include/python3.6m \
+		  $(ANACONDA_HOME)/lib/python3.6/site-packages/numpy/core/include
 
 # We need to be able to find libpythonX.X.so or .dylib.
 # PYTHON_LIB := /usr/lib
@@ -81,7 +81,7 @@ LIBRARY_DIRS := $(PYTHON_LIB) /usr/local/lib /usr/lib /usr/local/include /usr/li
 
 # Uncomment to use `pkg-config` to specify OpenCV library paths.
 # (Usually not necessary -- OpenCV libraries are normally installed in one of the above $LIBRARY_DIRS.)
-# USE_PKG_CONFIG := 1
+USE_PKG_CONFIG := 1
 
 BUILD_DIR := build
 DISTRIBUTE_DIR := distribute
